# runlet

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_discussion.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  comparison.md  design-principles.md  index.md  roadmap.md
docs/concepts/: core-models.md  provider-neutrality.md  runtime-boundary.md
docs/getting-started/: anthropic-messages.md  first-agent.md  full-example.md  installation.md  openai-chat-completions.md  openai-responses.md  streaming.md  tool-calling.md
docs/guides/: conversation-state.md  human-in-the-loop.md  observability.md  provider-options.md  reasoning.md
src/runlet/: __init__.py  context.py  core.py  errors.py  hooks.py  models.py  runtime.py  state.py  testing.py  tools.py
src/runlet/core/: __init__.py  agent.py  events.py  human.py  messages.py  models.py  runs.py
src/runlet/integrations/: __init__.py  human.py  tools.py
src/runlet/providers/: __init__.py  anthropic.py  openai.py  openai_chat.py
src/runlet/runtime/: __init__.py  checkpoints.py  context.py  engine.py  policies.py
src/runlet/testing/: __init__.py  fakes.py
tests/: test_anthropic_provider.py  test_checkpoints.py  test_context.py  test_core.py  test_events.py  test_hooks.py  test_human.py  test_models.py  test_openai_chat_provider.py  test_openai_provider.py  test_package_layout.py  test_public_api.py  test_runtime_basic.py  test_runtime_human.py  test_runtime_streaming.py  test_runtime_streaming_human.py  test_runtime_streaming_tools.py  test_runtime_tools.py  test_state.py  test_tools.py
