[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runlet"
version = "0.2.0b1"
description = "A tiny observable runtime for Python agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Runlet contributors" },
]
keywords = ["agent", "runtime", "llm", "observability", "hooks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
openai = [
  "openai>=1.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/DMIAOCHEN/runlet"
Documentation = "https://dmiaochen.github.io/runlet/"
Repository = "https://github.com/DMIAOCHEN/runlet"
Issues = "https://github.com/DMIAOCHEN/runlet/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/runlet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src", "tests"]
